docs(interview): 聚焦 Java 技术栈学习
1. 删除 482 道通用服务端题目，保留 116 道技术栈题。
2. 精简基础讲解，补充 JVM、Spring 和中间件的 Java 示例及使用边界。
3. 重建六类导航并保留题号，清理通用模板和 24 张未引用图片。